src/components/Inputs/inputs.scss
@import "../../App.scss";

.container__inputs {
  font-size: 1.3rem;
  margin-bottom: 5px;
  box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.39);
}

input,
.btn__add-todo,
.fa-search {
  background-color: $lGray;
  height: 1.9rem;
  color: $dGray;
}

input.add-todo,
.btn__add-todo {
  margin-top: 25px;
  outline: none;
}

.wrapper__add-todo {
  width: 100%;
  display: flex;
  justify-content: center;
  padding-bottom: 6px;

  input {
    width: 65%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: inherit;
    padding-left: 0.4rem;
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
    border: 1px inset $mWhite;
    transition: all 0.5s;
    &:focus {
      outline: none;
      background-color: $sWhite;
      box-shadow: 0px -1px 4px $mWhite;
    }
  }
  .invalid:focus {
    border-bottom: 1px solid #c83a3a;
  }
  input.add-todo.valid:focus {
    border-right: none;
    border: 1px solid $mGreen;
    box-shadow: 0px 0px 4px $mWhite;
  }
  button {
    background-color: rgb(0, 0, 0);
    display: flex;
    padding: 4px 6px;
    font-weight: 500;
    line-height: 0.9rem;
    letter-spacing: 0.6px;
    color: $mGreen;
    border: 1px solid $mGreen;
    border-left: none;
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
    text-transform: uppercase;
    opacity: 0.8;
  }
  button:hover {
    cursor: pointer;
    opacity: 1;
  }
  button:focus {
    opacity: 1;
  }
}

//Search
.wrapper__search-todo {
  height: 6.4rem;
  display: flex;
  justify-content: center;
  align-items: center;

  //Search bar
  input {
    width: 35%;
    height: 2rem;
    padding-left: 0.4rem;
    font-size: inherit;
    border-left: none;
    border-color: $mWhite;
    border-bottom-right-radius: 8px;
    border-top-right-radius: 8px;
    transition: all 0.5s;
    &:focus {
      background-color: $sWhite;
      width: 45%;
      outline: none;
      box-shadow: 0px 0px 5px $mWhite;
    }
  }
  //search icon
  .fa-search {
    display: flex;
    padding: 0 4px;
    font-size: 1.3rem;
    height: 2rem;
    line-height: 1.7rem;
    color: #5e5b5b;
    border: 2px inset $mWhite;
    border-right: none;
    border-bottom-left-radius: 8px;
    border-top-left-radius: 8px;
  }
}

@media (min-width: 576px) {
  .wrapper__add-todo {
    input.add-todo {
      width: 65%;
    }
  }
}

@media (min-width: 768px) {
  .wrapper__add-todo {
    input.add-todo {
      width: 50%;
    }
  }
}

@media (min-width: 992px) {
  .container__inputs {
    font-size: 1.5rem;
    box-shadow: 0px 9px 7px 0px rgba(0, 0, 0, 0.39);
  }
  .wrapper__add-todo {
    input,
    button {
      height: 2.9rem;
    }
    input.add-todo {
      width: 40%;
    }
    button {
      padding-left: 2rem;
      padding-right: 2rem;
    }
  }
  .wrapper__search-todo {
    margin-bottom: 20px;
    input.search-todo,
    .fa-search {
      height: 2.8rem;
      padding: 4px;
      align-self: flex-end;
      margin-bottom: 10px;
      &:focus {
        width: 20%;
      }
    }
    input {
      width: 15%;
    }
  }
}

